<resources>
    <string name="app_name">iutiao</string>
    <string name="com_iutiao_quick_login">Quick login</string>
    <string name="com_iutiao_login_btn">Login</string>
    <string name="com_iutiao_login_username_hint">Email or Phone</string>
    <string name="com_iutiao_login_password_hint">Password</string>
    <string name="com_iutiao_quick_register">Quick register</string>
    <string name="com_iutiao_hint_register_password">Password</string>
    <string name="com_iutiao_register_password_confirm">Password confirm</string>
    <string name="com_iutiao_register_username">account@example.com</string>
    <string name="com_iutiao_register">Register</string>
    <string name="com_iutiao_next">Next</string>
    <string name="com_iutiao_signin">Signin</string>
    <string name="com_iutiao_forgot_password">Forgot your password?</string>
    <string name="com_iutiao_progress_loading">Please waiting ...</string>
    <string name="com_iutiao_verify">Verify</string>
    <string name="com_iutiao_verify_resend">Resend Code</string>
    <string name="com_iutiao_verify_label">Please wait for the SMS and then enter the code here</string>
    <string name="com_iutiao_verify_title">Verification</string>
    <string name="com_iutiao_dialog_phone_title">Your phone</string>
    <string name="com_iutiao_register_phone_message">Please confirm your country code and enter your phone number</string>
    <string name="com_iutiao_dialog_login_title">SIGNIN</string>
    <string name="com_iutiao_dialog_login_message">Enter your credentials to continue</string>
    <string name="com_iutiao_error_invalid_email_or_phone">Invalid Email or Phone</string>
    <string name="com_iutiao_reset_password_password_hint">New Password</string>
    <string name="com_iutiao_verify_code">Code</string>
    <string name="com_iutiao_reset_password_btn_reset">Reset Password</string>
    <string name="com_iutiao_profile_signout">Signout</string>
    <string name="com_iutiao_profile">Profile</string>
    <string name="com_iutiao_profile_login">Login</string>
    <string name="com_iutiao_profile_nickname">Nickname</string>
    <string name="com_iutiao_profile_uid">uid</string>
    <string name="com_iutiao_profile_balance">Balance:</string>
    <string name="com_iutiao_settings_item_balance">Balance</string>
    <string name="com_iutiao_profile_bind_phone">Bind phone</string>
    <string name="com_iutiao_phone_bound">Phone Associated</string>
    <string name="com_iutiao_phone_to_bind">Associate Phone</string>
    <string name="com_iutiao_charge_title">Please choose charge amount</string>
    <string name="com_iutiao_charge_convert_desc">1U ~= 1RMB</string>
    <string name="com_iutiao_confirm">Confirm</string>
    <string name="com_iutiao_charge_amount_hint"></string>
    <string name="com_iutiao_charge_1u">1U</string>
    <string name="com_iutiao_charge_5u">5U</string>
    <string name="com_iutiao_charge_10u">35U</string>

    <string name="choose_paymethod_title">Choose payment method</string>
    <string name="com_iutiao_charge_2u">2U</string>
    <string name="upay">upay</string>
    <string name="com_iutiao_payment">Pay</string>
    <string name="com_iutiao_progress_loading_create_app_order">Creating order, please waiting ...</string>
    <string name="com_iutiao_progress_loading_retrieve_app_order">Retrieving order, please waiting ...</string>
    <string name="com_iutiao_reset_password_btn_verify">Verify</string>
    <string name="com_iutiao_charge_pay_method">Choose you payment method</string>
    <string name="com_iutiao_your_balance">Current Balance: </string>
    <string name="com_iutiao_payment_description">When you reload your balance, you are purchasing U Coin in the selected amount that will be automatically added to your Balance. View <a href="http://www.iutiao.com/ucoin/terms/">Terms and Conditions.</a></string>
    <string name="com_iutiao_reload_your_balance">Reload Your Balance</string>
    <string name="com_iutiao_balance_prefix">$ %1s</string>
    <string name="com_iutiao_refresh">Refresh</string>
    <string name="com_iutiao_already_register">Already have an account?</string>
    <string name="com_iutiao_agreement">By continuing, you agree to our Terms and Privacy Policy</string>
    <string name="com_iutiao_register_email_btn">sign up with email</string>
    <string name="com_iutiao_error_email_not_valid">Invalid Email</string>
    <string name="com_iutiao_error_empty_pwd">Please enter your password</string>
    <string name="com_iutiao_error_pwd_length">Password lengh must be over 6 letters</string>
    <string name="com_iutiao_tips_welcome">welcome </string>
    <string name="com_iutiao_error_phone">Invalid Phone</string>
    <string name="com_iutiao_error_empty_verify_code">Please enter verify code</string>
    <string name="com_iutiao_tips_success_reset_pwd">Password change successful，welcome back～</string>
    <string name="com_iutiao_hint_phone">registered phone</string>
    <string name="com_iutiao_next_step">Next</string>
    <string name="com_iutiao_hint_verify_code">verify code</string>
    <string name="com_iutiao_new_pwd">New Password</string>
    <string name="com_iutiao_old_pwd">Current Password</string>
    <string name="com_iutiao_reset_pwd">Reset Password</string>
    <string name="com_iutiao_account_settings">Account Settings</string>
    <string name="com_iutiao_settings_phone">Phone</string>
    <string name="coom_iutiao_settings_unbind">Unverified</string>
    <string name="com_iutiao_charge_other_amount">Other Amount</string>
    <string name="com_iutiao_charge">Reload</string>
    <string name="com_iutiao_verify_bind_phone">Bind</string>
    <string name="com_iiutiao_pay_alipay">Alipay</string>
    <string name="com_iutiao_unionpay">Unionpay</string>
    <string name="com_iutiao_wechatpay">Wechat</string>
    <string name="com_iutiao_balance_suffixes">" U"</string>
    <string name="com_iutiao_menu_account_settings">Account Settings</string>
    <string name="com_iutiao_menu_logout">Logout</string>
    <string name="com_iutiao_payment_qiwi">qiwi</string>
    <string name="com_iutiao_payment_yamoney">yamoney</string>
    <string name="com_iutiao_popup_tips">Tips</string>
    <string name="com_iutiao_popup_logout_ask">Logout?</string>
    <string name="com_iutiao_cancel">Cancel</string>
    <string name="com_iutiao_tips_bound">Verified</string>
    <string name="com_iutiao_tips_ask_bind">Please bind your phone or email first.</string>
    <string name="com_iutiao_bind_emial_hint">Email</string>
    <string name="com_iutiao_error_code_length">Code lengh must be over 6 letters</string>
    <string name="com_iutiao_account_uid">UID</string>
    <string name="com_iutiao_tips_verify_email">Please open the link in the email to verify~</string>
    <string name="com_iutiao_tips_nickname_modified">Nickname has been modified</string>
    <string name="com_iutiao_username_error_tooshort">Nickname lengh must be over 6 letters</string>
    <string name="com_iutiao_error_username_toolong">Nickname lengh can not be over 50 letters</string>
</resources>