<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/com_iutiao_activity_horizontal_margin">

    <EditText
        android:id="@+id/editText"
        style="@style/IUTiaoEtCommon"
        android:layout_weight="1"
        android:hint="@string/com_iutiao_login_username_hint"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText2"
        style="@style/IUTiaoEtCommon"
        android:layout_weight="1"
        android:hint="@string/com_iutiao_login_password_hint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        style="@style/IUTiaoTvErrorSmall"
        android:text="@string/com_iutiao_error_invalid_email_or_phone" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/com_iutiao_login_btn" />

    <TextView
        android:id="@+id/textView3"
        style="@style/IUTiaoTvTipSmall"
        android:layout_weight="1"
        android:text="@string/com_iutiao_agreement" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/IUTiaoTextBtnSmall"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/com_iutiao_quick_register" />

        <TextView
            android:id="@+id/textView2"
            style="@style/IUTiaoTextBtnSmall"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/com_iutiao_forgot_password" />
    </LinearLayout>

</LinearLayout>