<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/com_iutiao_activity_horizontal_margin">


    <EditText
        style="@style/IUTiaoEtCommon"
        android:inputType="textEmailAddress"
        android:hint="@string/com_iutiao_register_username"
        android:id="@+id/et_email_signup_email" />

    <EditText
        style="@style/IUTiaoEtCommon"
        android:inputType="textPassword"
        android:hint="@string/com_iutiao_hint_register_password"
        android:id="@+id/et_email_signup_password" />

    <TextView
        style="@style/IUTiaoTvErrorSmall"
        android:text="@string/com_iutiao_error_invalid_email_or_phone"
        android:id="@+id/tv_email_signup_error"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_email_signup_signup"
        style="@style/IUTiaoTextBtnBlue"
        android:text="@string/com_iutiao_register" />
    <TextView
        style="@style/IUTiaoTvTipSmall"
        android:text="@string/com_iutiao_agreement"
        android:id="@+id/tv_email_signup_tip"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/IUTiaoTextBtnSmall"
            android:id="@+id/textBtn_email_signup_go_email_signin"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/com_iutiao_already_register" />

        <TextView
            style="@style/IUTiaoTextBtnSmall"
            android:id="@+id/textBtn_email_signup_go_qick_register"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/com_iutiao_quick_register"/>
    </LinearLayout>

</LinearLayout>