<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/com_iutiao_activity_horizontal_margin">


    <EditText
        android:id="@+id/et_phone_signup_phone"
        style="@style/IUTiaoEtCommon"
        android:layout_weight="1"
        android:hint="@string/com_iutiao_register_phone_message"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tv_phone_signup_error"
        style="@style/IUTiaoTvErrorSmall"
        android:text="@string/com_iutiao_error_invalid_email_or_phone"
        android:visibility="gone" />

    <TextView
        android:id="@+id/btn_phone_signup_next"
        style="@style/IUTiaoTextBtnBlue"
        android:text="@string/com_iutiao_next"/>

    <TextView
        android:id="@+id/tv_phone_signup_tip"
        style="@style/IUTiaoTvTipSmall"
        android:layout_weight="1"
        android:text="@string/com_iutiao_agreement" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textBtn_phone_signup_go_email_signin"
            style="@style/IUTiaoTextBtnSmall"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/com_iutiao_already_register" />

        <TextView
            android:id="@+id/textBtn_phone_signup_go_email_signup"
            style="@style/IUTiaoTextBtnSmall"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/com_iutiao_register_email_btn" />
    </LinearLayout>

</LinearLayout>