<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, prchance, Inc. All rights reserved.
  ~
  ~ You are hereby granted a non-exclusive, worldwide, royalty-free license to use,
  ~ copy, modify, and distribute this software in source code or binary form for use
  ~ in connection with the web services and APIs provided by PRCHANCE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_login_btn"
        android:id="@+id/btn_login"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_quick_login"
        android:id="@+id/btn_quick_login"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_quick_register"
        android:id="@+id/btn_quick_register"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_register"
        android:id="@+id/btn_register"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>