<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, prchance, Inc. All rights reserved.
  ~
  ~ You are hereby granted a non-exclusive, worldwide, royalty-free license to use,
  ~ copy, modify, and distribute this software in source code or binary form for use
  ~ in connection with the web services and APIs provided by PRCHANCE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/com_iutiao_charge_title"
        android:id="@+id/textView2"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/com_iutiao_charge_1u"
                android:id="@+id/btn_1u"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/com_iutiao_charge_5u"
                android:id="@+id/btn_5u"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/com_iutiao_charge_10u"
                android:id="@+id/btn_10u"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button4"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button5"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/button6"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/com_iutiao_charge_amount_hint"
        android:inputType="number"
        android:id="@+id/et_amount"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/com_iutiao_charge_convert_desc"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_confirm"
        android:id="@+id/btn_confirm"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>