<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, prchance, Inc. All rights reserved.
  ~
  ~ You are hereby granted a non-exclusive, worldwide, royalty-free license to use,
  ~ copy, modify, and distribute this software in source code or binary form for use
  ~ in connection with the web services and APIs provided by PRCHANCE.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/et_code"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/com_iutiao_reset_password_password_hint"
        android:id="@+id/et_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_reset_password_btn_reset"
        android:id="@+id/btn_action"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/com_iutiao_verify_resend"
        android:id="@+id/btn_resend"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>